[package]
name = "rustproxyparser"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = "0.19"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }  # rustls 避免 openssl 依赖
url = "2.5"
core-foundation = "0.9"
system-configuration = "0.6"
scopeguard = "1.2"
regex = "1.10"
system-configuration-sys = "0.6"
chrono = { version = "0.4", features = ["clock"] }  # 用于 weekdayRange

# 只在 macOS 上需要这些
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"

[[bin]]
name = "proxyparser"
path = "src/main.rs"
