[package]
name = "proxyparser"
version = "0.1.0"
edition = "2021"
description = "A cross-platform system proxy detector with strong support for complex enterprise PAC scripts"
license = "MIT"
repository = "https://github.com/l16659/rustproxyparser"
keywords = ["proxy", "pac", "system-proxy", "network", "http-proxy"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
boa_engine = "0.19"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5"
scopeguard = "1.2"
regex = "1.10"
chrono = { version = "0.4", features = ["clock"] }

# macOS 专用
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"
system-configuration-sys = "0.6"

# Windows 专用
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winhttp", "errhandlingapi", "winbase", "winerror"] }

[[bin]]
name = "proxyparser"              # 保持一致，用户 cargo install 后命令就是 proxyparser
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"
